test/ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-practice
  name: ssl-ingress
  namespace: test
spec:
  rules:
  - host: ssl-test.singorojo.my.id
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: test1-service
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - ssl-test.singorojo.my.id
    secretName: myingress-cert
